[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "broadcaster"
dynamic = ["version"]
description = "Simple broadcast channels."
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.8"
authors = [
    { name = "Tom Christie", email = "tom@tomchristie.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "anyio>=3.4.0,<5",
    "typing_extensions>=3.10.0; python_version < '3.10'",
]

[project.optional-dependencies]
redis = ["asyncio-redis"]
postgres = ["asyncpg"]
kafka = ["aiokafka"]
test =  ["pytest", "pytest-asyncio"]

[project.urls]
Homepage = "https://github.com/encode/broadcaster"

[tool.hatch.version]
path = "broadcaster/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/broadcaster",
]