[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "broadcaster"
dynamic = ["version"]
description = "Simple broadcast channels."
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.8"
authors = [
    { name = "Tom Christie", email = "tom@tomchristie.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "anyio>=3.4.0,<5",
    "typing_extensions>=3.10.0; python_version < '3.10'",
]

[project.optional-dependencies]
redis = ["asyncio-redis"]
postgres = ["asyncpg"]
kafka = ["aiokafka"]
test =  ["pytest", "pytest-asyncio"]

[project.urls]
Homepage = "https://github.com/encode/broadcaster"

[tool.hatch.version]
path = "broadcaster/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/broadcaster",
]

[tool.ruff]
ignore = []
line-length = 120
select = ["E","F","W"]

[tool.ruff.isort]
combine-as-imports = true

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
addopts = "-rxXs"
markers = "copied_from(source, changes=None): mark test as copied from somewhere else, along with a description of changes made to accodomate e.g. our test setup"

[tool.coverage.run]
source_pkgs = ["broadcaster", "tests"]

[tool.coverage.report]
fail_under = 78
show_missing = true
skip_covered = true
